<resources>
    <string name="app_name">Ecorecicla</string>

    <string name="title_home">Principal</string>
    <string name="title_category">Categorías</string>
    <string name="title_statistics">Estadística</string>
    <string name="title_tips">Consejos</string>

    <string name="user">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="forgot_password">¿Olvido su contraseña?</string>
    <string name="register">¿Aun no tienes cuenta? Regístrate</string>
    <string name="title_login">Iniciar sesión</string>

    <string name="title_register_user">Registro de usuario nuevo</string>
    <string name="name_user">Nombre</string>
    <string name="email_user">Correo</string>
    <string name="confirm">Confirmar</string>

    <string name="welcome">Bienvenido!!!</string>
    <string name="system_recycling">Recuerda que cada vez que reciclas apuestas por un mundo mas verde</string>
    <string name="category">Categorías</string>

    <string name="title_restore_user">Recuperar Contraseña</string>
    <string name="message_restore_email">Ingrese su correo electronico enviaremos un codigo de recuperacion</string>

    <string name="register_category">Categoría</string>
    <string name="container">Envase</string>
    <string name="glass">Vídrio</string>
    <string name="paper">Papel</string>
    <string name="plastic">Plástico</string>
    <string name="weight">Peso</string>
    <string name="price">Precio</string>
    <string name="date">Fecha</string>

    <string name="category_materials">Categoría de materiales</string>
    <string name="title_advice">Consejos</string>
    <string name="advice_now">Aquí va el consejo del día...</string>

    <string name="question_security">Preguntas de seguridad</string>
    <string name="question_one">¿Nombre de tu maestra de primaria?</string>
    <string name="question_two">¿Cual es tu comida favorita?</string>

    <string name="empty_field">El campo no puede estar vacio</string>


</resources>