<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/matetialsCategoryET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/category_materials"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/glassIV"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/glass_material"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/matetialsCategoryET" />

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/paper_material"
        app:layout_constraintEnd_toStartOf="@+id/plasticImageView"
        app:layout_constraintStart_toEndOf="@+id/glassIV"
        app:layout_constraintTop_toBottomOf="@+id/matetialsCategoryET" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/plasticImageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/plastic_material"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/matetialsCategoryET" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/greenRecyclingIV"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/green_recycling"
        app:layout_constraintBottom_toTopOf="@+id/glassTV"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/blue_recycling"
        app:layout_constraintBottom_toTopOf="@+id/paperTV"
        app:layout_constraintEnd_toStartOf="@+id/yellowRecyclinIV"
        app:layout_constraintStart_toEndOf="@+id/greenRecyclingIV" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/yellowRecyclinIV"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/yellow_recycling"
        app:layout_constraintBottom_toTopOf="@+id/plasticTV"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/plasticImageView" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/glassTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/glass"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/paperTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/paper"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/plasticTV"
        app:layout_constraintStart_toEndOf="@+id/glassTV" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/plasticTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/plastic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>